# seam-carving

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Demo.cmake  LICENSE  Makefile  README.md  cli.py  demo.cpp  main.cpp  requirements.txt  timer.hpp  vcpkg.json
.github/workflows/: ci.yml  pushok.yml
cmake/: add_unit_test.cmake  demo.cmake
cpp/include/: CarvableImage.h  SeamCarvableImage.h  constants.h  energy.h  pch.h
cpp/src/: BindSeamCarving.cpp  CarvableImage.cpp  bind.cpp  energy.cpp  main.cpp
include/: CarvableImage.h  Carver.h  Coord.h  Seam.h  constants.h  energy.h
libseam_carving/: CMakeLists.txt  carver.cpp  coord.cpp  energy.cpp  seam.cpp
libseam_carving/seam_carving/: carver.hpp  coord.hpp  energy.hpp  seam.hpp
libseam_carving/seam_carving/tests/: carver_data.hpp  dummy_carver.hpp  energy_data.hpp  json_utils.hpp  matrix_data.hpp  matrix_utils.hpp  print_utils.hpp  test_data.hpp
libseam_carving/tests/: CMakeLists.txt  carver_data.cpp  data.json  dummy_carver.hpp  energy_data.cpp  generator.cpp  json_utils.cpp  loader.cpp  matrix_data.cpp  test_data.cpp
libseam_carving/tests/data/: Seam Carving Tests - TestId_0.csv  Seam Carving Tests - TestId_1.csv  Seam Carving Tests - TestId_1.tsv  Seam Carving Tests - TestId_2.csv  Seam Carving Tests - TestId_2.tsv  Seam Carving Tests - TestId_3.csv  Seam Carving Tests - TestId_3.tsv  Seam Carving Tests - TestId_4.csv  Seam Carving Tests - TestId_4.tsv
libseam_carving/tests/unit/: CMakeLists.txt  carver.test.cpp  coord.test.cpp  energy.test.cpp
python/: cli.py  python-bindings.cpp  requirements.txt
seam_carving/: CMakeLists.txt  main.cpp
src/: CarvableImage.cpp  Carver.cpp  Coord.cpp  Seam.cpp  energy.cpp  main.cpp  main.cpp.old
test/: data.json  runner.cpp
test/include/: CarverTestData.h  EnergyTestData.h  MatrixJSON.h  TestData.h
test/raw-data/: Seam Carving Tests - TestId_0.tsv  Seam Carving Tests - TestId_1.tsv  Seam Carving Tests - TestId_2.tsv  Seam Carving Tests - TestId_3.tsv  Seam Carving Tests - TestId_4.tsv
test/src/: generator.cpp  loader.cpp
test/unit/: TestData.h  energy.test.cpp  test.test.cpp
test/utils/: loader.cpp
tests/: CMakeLists.txt  carver_data.hpp  data.json  dummy_carver.hpp  generator.cpp  json_utils.cpp  json_utils.hpp  loader.cpp  parser.cpp
tests/data/: Seam Carving Tests - TestId_0.csv  Seam Carving Tests - TestId_1.csv  Seam Carving Tests - TestId_2.csv  Seam Carving Tests - TestId_3.csv  Seam Carving Tests - TestId_4.csv  Seam Carving Tests - TestId_5.csv
tests/include/: carver_data.hpp  dummy_carver.hpp  energy_data.hpp  json_utils.hpp  parser.hpp  print_utils.hpp  test_data.hpp
tests/unit/: CMakeLists.txt  carver.test.cpp  energy.test.cpp
